--- a/OOP/index.html
+++ b/OOP/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Object to zbiór par właściwości i wartości</h1>
     
     <script src="script.js" type="text/javascript"></script>
 </body>
